// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = false > should correctly render a diff with a SVN diff format 1`] = `
" 1 - const oldVar = 1;
 1 + const newVar = 1;
════════════════════════════════════════════════════════════════════════════════
20 - const anotherOld = 'test';
20 + const anotherNew = 'test';
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = false > should correctly render a diff with multiple hunks and a gap indicator > with terminalWidth 30 and height 6 1`] = `
"... 10 hidden (Ctrl+O) ...
   'test';
21 + const anotherNew =
   'test';
22  console.log('end of second
    hunk');
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = false > should correctly render a diff with multiple hunks and a gap indicator > with terminalWidth 80 and height 6 1`] = `
"... first 4 lines hidden (Ctrl+O to show) ...
════════════════════════════════════════════════════════════════════════════════
20   console.log('second hunk');
21 - const anotherOld = 'test';
21 + const anotherNew = 'test';
22   console.log('end of second hunk');
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = false > should correctly render a diff with multiple hunks and a gap indicator > with terminalWidth 80 and height undefined 1`] = `
" 1   console.log('first hunk');
 2 - const oldVar = 1;
 2 + const newVar = 1;
 3   console.log('end of first hunk');
════════════════════════════════════════════════════════════════════════════════
20   console.log('second hunk');
21 - const anotherOld = 'test';
21 + const anotherNew = 'test';
22   console.log('end of second hunk');
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = false > should correctly render a new file with no file extension correctly 1`] = `
"1 FROM node:14
2 RUN npm install
3 RUN npm run build
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = false > should handle diff with only header and no changes 1`] = `
"
 No changes detected.
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = false > should handle empty diff content 1`] = `
"No diff content.
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = false > should not render a gap indicator for small gaps (<= MAX_CONTEXT_LINES_WITHOUT_GAP) 1`] = `
" 1   context line 1
 2   context line 2
 3   context line 3
 4   context line 4
 5   context line 5
11   context line 11
12   context line 12
13   context line 13
14   context line 14
15   context line 15
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = false > should render a gap indicator for skipped lines 1`] = `
" 1   context line 1
 2 - deleted line
 2 + added line
════════════════════════════════════════════════════════════════════════════════
10   context line 10
11   context line 11
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = false > should render diff content for existing file (not calling colorizeCode directly for the whole block) 1`] = `
"1 - old line
1 + new line
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = true > should correctly render a diff with a SVN diff format 1`] = `
" 1 - const oldVar = 1;
 1 + const newVar = 1;
════════════════════════════════════════════════════════════════════════════════
20 - const anotherOld = 'test';
20 + const anotherNew = 'test';
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = true > should correctly render a diff with multiple hunks and a gap indicator > with terminalWidth 30 and height 6 1`] = `
"... 10 hidden (Ctrl+O) ...
   'test';
21 + const anotherNew =
   'test';
22  console.log('end of second
    hunk');
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = true > should correctly render a diff with multiple hunks and a gap indicator > with terminalWidth 80 and height 6 1`] = `
"... first 4 lines hidden (Ctrl+O to show) ...
════════════════════════════════════════════════════════════════════════════════
20   console.log('second hunk');
21 - const anotherOld = 'test';
21 + const anotherNew = 'test';
22   console.log('end of second hunk');
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = true > should correctly render a diff with multiple hunks and a gap indicator > with terminalWidth 80 and height undefined 1`] = `
" 1   console.log('first hunk');
 2 - const oldVar = 1;
 2 + const newVar = 1;
 3   console.log('end of first hunk');
════════════════════════════════════════════════════════════════════════════════
20   console.log('second hunk');
21 - const anotherOld = 'test';
21 + const anotherNew = 'test';
22   console.log('end of second hunk');
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = true > should correctly render a new file with no file extension correctly 1`] = `
"1 FROM node:14
2 RUN npm install
3 RUN npm run build
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = true > should handle diff with only header and no changes 1`] = `
"
 No changes detected.
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = true > should handle empty diff content 1`] = `
"No diff content.
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = true > should not render a gap indicator for small gaps (<= MAX_CONTEXT_LINES_WITHOUT_GAP) 1`] = `
" 1   context line 1
 2   context line 2
 3   context line 3
 4   context line 4
 5   context line 5
11   context line 11
12   context line 12
13   context line 13
14   context line 14
15   context line 15
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = true > should render a gap indicator for skipped lines 1`] = `
" 1   context line 1
 2 - deleted line
 2 + added line
════════════════════════════════════════════════════════════════════════════════
10   context line 10
11   context line 11
"
`;

exports[`<OverflowProvider><DiffRenderer /></OverflowProvider> > with useAlternateBuffer = true > should render diff content for existing file (not calling colorizeCode directly for the whole block) 1`] = `
"1 - old line
1 + new line
"
`;
